--- a/pages/rechange/rechange.wxml
+++ b/pages/rechange/rechange.wxml
@@ -8,7 +8,8 @@
             </view>
         </view>
     </view>
-    <button type="warn" class="save-btn" formType="submit">立即支付</button>
+    <button type="primary" class="save-btn1" formType="submit">微信支付</button>
+    <button type="warn" class="save-btn2" formType="submit">银行卡支付</button>
     <button type="default" class="cancel-btn" bindtap="bindCancel">取消</button>
     </form>
 </view>
