--- a/pages/select-address/select-address.wxml
+++ b/pages/select-address/select-address.wxml
@@ -3,11 +3,12 @@
     <view class="a-address" wx:for-items="{{addressList}}" wx:key="{{index}}">
       <view class="left-text {{item.isDefault? 'active':''}}" bindtap="selectTap" data-id="{{item.id}}">
         <view class="name-tel">
-          {{item.linkMan}} {{item.mobile}}
+          {{item.userName}} {{item.mobile}}
         </view>
         <view class="address-box">
           {{item.address}}
         </view>
+        
       </view>
       <wxc-icon class="right-edit" type='edit' size='35' color='#999999' bindtap="editAddess" data-id="{{item.id}}"></wxc-icon>
       <!--<view class="right-edit" bindtap="editAddess" data-id="{{item.id}}"></view>-->
