--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,1 +1,2 @@
-<navigator url="/pages/balance/balance">11111</navigator>
+<navigator url="/pages/balance/balance">账户余额</navigator>
+<navigator url="/pages/select-address/select-address">收货地址</navigator>
