--- a/pages/trade/trade.wxss
+++ b/pages/trade/trade.wxss
@@ -38,6 +38,7 @@
 
 .search-icon {
   margin-left: 15rpx;
+  color: black
 }
 
 .search-input {
@@ -59,11 +60,11 @@
   border: none;
 }
 
-.name1{
-  height: 70rpx；
-  width:100%；
-  backgroud-color:#fff;
-   display: flex;
+.section1{
+  width: 100%;
+  height: 70rpx;
+  display: flex;
+  border: 1px solid #fff;
   flex-direction: row;
   align-items: center;
 }
@@ -79,3 +80,7 @@
   color:black;
   border: none;
 }
+
+
+
+
