--- a/pages/address-add/address-add.wxml
+++ b/pages/address-add/address-add.wxml
@@ -1,16 +1,17 @@
 <view class="container">
   <form bindsubmit="bindSave">
+<block wx:if="{{wxaddress}}!={}">
     <view class="form-box">
       <view class="row-wrap">
         <view class="label">联系人</view>
         <view class="label-right">
-          <input name="receiver" class="input" type="text" placeholder="姓名"/>{{receiver}}
+          <input name="linkMan" class="input" type="text" placeholder="姓名" value="{{addressData.linkMan}}{{wxaddress.userName}}" />
         </view>
       </view>
       <view class="row-wrap">
         <view class="label">手机号码</view>
         <view class="label-right">
-          <input name="mobile" class="input" maxlength="11" type="number" placeholder="11位手机号码" value="{{mobile}}" />
+          <input name="mobile" class="input" maxlength="11" type="number" placeholder="11位手机号码" value="{{addressData.mobile}}{{wxaddress.telNumber}}" />
         </view>
       </view>
       <view class="row-wrap" bindtap="selectCity">
@@ -46,9 +47,11 @@
         </view>
       </view>
     </view>
-    <button type="warn"  formType="submit">保存</button>
+    </block>
+
+    <button type="default" class="save-btn" formType="submit">保存</button>
     <button wx:if="{{!addressData}}" type="primary" class="save-btn" bindtap="readFromWx">从微信读取</button>
-    <button type="default" class="save-btn" bindtap="deleteAddress" data-id="{{addressData.id}}" wx:if="{{addressData}}">删除该地址</button>
+    <button type="warn" class="save-btn" bindtap="deleteAddress" data-id="{{addressData.id}}" wx:if="{{addressData}}&&{{wxaddress}}">删除该地址</button>
     <button type="default" class="cancel-btn" bindtap="bindCancel">取消</button>
   </form>
 </view>
