--- a/pages/balance/balance.wxss
+++ b/pages/balance/balance.wxss
@@ -1,19 +1,44 @@
 /* pages/balance/balance.wxss */
-page{
-    height: 100%;
+
+page {
+  height: 100%;
 }
-.container{
-    background-color: #f5f5f9;
-    justify-content: initial;
-    width: 690rpx;
-    height: 80rpx;
-    line-height: 80rpx;
-    text-align: left;
-    margin-top:30rpx; 
-    border-radius: 6rpx;
-    box-sizing: border-box;
+
+.container {
+  background-color:  #65d465;
+  justify-content: center;
+  width: 100%;
+  height: 500rpx;
+  line-height: 80rpx;
+  display: flex;
+  text-align: left;
+  box-sizing: border-box;
 }
-.container{
-    background-color: #f9feff;
-    justify-content: initial;
+
+.container text{
+  width: 400rpx;
+  height: 100rpx;
+  font-size: 50rpx;
+  direction: ltr;
+  text-align: left;
+}
+.rechange{
+  width: 100%;
+  height: 80rpx; 
+  margin-top: 1rpx;
+  display: flex;
+  flex-flow: row;
+  justify-content: flex-start;
+  border-bottom: 2rpx solid #fff;
+}
+.rechange-pic {
+  height: 60rpx;
+  width: 60rpx;
+}
+.rechange text{
+  width: 200rpx;
+  height: 80rpx;
+  font-size: 45rpx;
+  direction: ltr;
+  text-align: left;
 }
