--- a/pages/rechange/rechange.wxml
+++ b/pages/rechange/rechange.wxml
@@ -4,7 +4,7 @@
         <view class="row-wrap">
             <view class="label">充值金额</view>
             <view class="label-right">
-                <input name="amount" class="input" type="text" placeholder="0.00"/>
+                <input name="rechargeAmount" class="input" type="text" placeholder="0.00"/>
             </view>
         </view>
     </view>
