--- a/pages/shopping/shopping.wxml
+++ b/pages/shopping/shopping.wxml
@@ -1,35 +1,36 @@
 <!--pages/shopping/shopping.wxml-->
-<scroll-view class="scroll" scroll-y="true">
-  <view class="separate"></view>
-  <view wx:for="{{carts}}">
-    <view class="cart_container">
-      <image class="item-select" bindtap="switchSelect" data-index="{{index}}" data-id="{{index}}" src="{{item.isSelect?'../../images/cart/comment_select.png':'../../images/cart/comment_normal.png'}}" />
-
-      <image class="item-image" src="{{item.pic}}"></image>
-
-      <view class="column">
-        <text class="title">{{item.name}}</text>
-        <view class="row">
-          <text class="sku-price">￥</text>
-          <text class="sku-price">{{item.price}}</text>
-          <view class="sku">
-            <template is="quantity" data="{{ ...item.count, componentId: index }}" />
-          </view>
+<view class="main">
+    <view wx:if="{{hasList}}">
+        <view class="cart-box">
+            <view class="cart-list" wx:for="{{cartsList}}" wx:key="{{index}}">
+                <icon wx:if="{{item.selected}}" type="success" color="#c0a97a" data-index="{{index}}"  class="cart-pro-select" bindtap="selectList"/>
+                <icon wx:else type="circle" class="cart-pro-select" data-index="{{index}}" bindtap="selectList"/>
+                <navigator url="../details/details?id={{item.id}}"><image class="cart-thumb" src="{{item.image}}"></image></navigator>
+                <text class="cart-pro-name">{{item.title}}</text>
+                <text class="cart-pro-price">￥{{item.price}}</text>
+                <view class="cart-pro-info-box"> 
+                <text class="cart-pro-guige">规格：{{item.guige}}</text>
+                <text class="cart-pro-grade">等级：{{item.grade}}</text>
+                </view>
+                <view class="cart-count-box">
+                    
+                    <text class="cart-count-num">{{item.num}}</text>
+                    
+                </view>
+                <text class="cart-del" bindtap="deleteList" data-index="{{index}}">×</text>
+            </view>
         </view>
 
-      </view>
+        <view class="cart-footer">
+            <icon wx:if="{{selectAllStatus}}" type="success_circle" color="#fff" class="total-select" bindtap="selectAll"/>
+            <icon wx:else type="circle" color="#fff" class="total-select" bindtap="selectAll"/>
+            <navigator url="../orders/orders"><view class="order-icon" bindtap="toPayOrder">去结算</view></navigator>
+            <text>全选</text>
+            <text class="cart-toatl-price">￥{{totalPrice}}</text>
+           
+        </view>
     </view>
-    <view class="separate"></view>
-  </view>
-</scroll-view>
-<view class="bottom_total">
-  <view class="bottom_line"></view>
-
-  <view class="row">
-    <image class="item-allselect" bindtap="allSelect" src="{{isAllSelect?'../../images/cart/comment_select.png':'../../images/cart/comment_normal.png'}}" />
-    <text class="small_text">全选</text>
-    <text>合计:￥ </text>
-    <text class="price">{{totalMoney}}</text>
-    <button class="button-red" bindtap="toBuy" formType="submit">去结算</button>
-  </view>
+    <view wx:else>
+        <view class="cart-no-data">购物车是空的哦~</view>
+    </view>
 </view>
