--- a/pages/balance/balance.wxss
+++ b/pages/balance/balance.wxss
@@ -1,1 +1,44 @@
 /* pages/balance/balance.wxss */
+
+page {
+  height: 100%;
+}
+
+.container {
+  background-color:  #65d465;
+  justify-content: center;
+  width: 100%;
+  height: 500rpx;
+  line-height: 80rpx;
+  display: flex;
+  text-align: left;
+  box-sizing: border-box;
+}
+
+.container text{
+  width: 400rpx;
+  height: 100rpx;
+  font-size: 50rpx;
+  direction: ltr;
+  text-align: left;
+}
+.rechange{
+  width: 100%;
+  height: 80rpx; 
+  margin-top: 1rpx;
+  display: flex;
+  flex-flow: row;
+  justify-content: flex-start;
+  border-bottom: 2rpx solid #fff;
+}
+.rechange-pic {
+  height: 60rpx;
+  width: 60rpx;
+}
+.rechange text{
+  width: 200rpx;
+  height: 80rpx;
+  font-size: 45rpx;
+  direction: ltr;
+  text-align: left;
+}
