--- a/pages/trade/trade.wxss
+++ b/pages/trade/trade.wxss
@@ -60,8 +60,8 @@
 }
 
 .name1{
-  height: 70rpx；
-  width:100%；
+  height: 70rpx;
+  width:100%;
   backgroud-color:#fff;
    display: flex;
   flex-direction: row;
