--- a/pages/shopping/shopping.wxss
+++ b/pages/shopping/shopping.wxss
@@ -43,7 +43,7 @@
     left: 285;
     bottom: 20rpx;
     width: 250rpx;
-    height: 60rpx;
+    height: 20rpx;
 
 }
 .cart-list .cart-pro-guige{
@@ -52,18 +52,27 @@
     line-height: 50rpx;
     overflow: hidden;
 }
-.cart-list .cart-pro-grade{
+.cart-list .cart-pro-box{
     display: inline-block;
-    float: right;
-    height: 30rpx;
-    line-height: 50rpx;
-}
-.cart-list .cart-count-box{
-    position: absolute;
     left: 285;
     bottom: 20rpx;
     width: 250rpx;
-    height: 60rpx;
+    height: 20rpx;
+}
+.cart-list .cart-pro-grade{
+  width: 300rpx;
+    height: 30rpx;
+    line-height: 30rpx;
+    overflow: hidden;
+    
+}
+.cart-list .cart-count-box{
+  display: inline-block;
+    
+    left: 285;
+    bottom: 20rpx;
+    width: 250rpx;
+    height: 20rpx;
 }
 .cart-list .cart-count-box text{
     display: inline-block;
@@ -76,7 +85,7 @@
     height: 100%;
 }
 .cart-count-num{
-    width: 150rpx;
+    width: 250rpx;
 }
 .cart-del{
     position: absolute;
