--- a/pages/orders/orders.wxml
+++ b/pages/orders/orders.wxml
@@ -12,9 +12,9 @@
     <view class="orders-box">
         <view wx:for="{{orders}}" wx:key="index" class="orders-list">
             <image class="orders-thumb" src="{{item.image}}"></image>
-            <view class="orders-pro-name">{{item.title}}</view>
+            <view class="orders-pro-name">{{item.goodname}}</view>
             <view class="orders-pro-price">￥{{item.price}}</view>
-            <view class="orders-count-num">×{{item.num}}</view>
+            <view class="orders-count-num">×{{item.byNumber}}</view>
         </view>
     </view>
 
