--- a/pages/shopping/shopping.wxml
+++ b/pages/shopping/shopping.wxml
@@ -6,19 +6,19 @@
                 <icon wx:if="{{item.selected}}" type="success" color="#c0a97a" data-index="{{index}}"  class="cart-pro-select" bindtap="selectList"/>
                 <icon wx:else type="circle" class="cart-pro-select" data-index="{{index}}" bindtap="selectList"/>
                 <navigator url="../details/details?id={{item.id}}"><image class="cart-thumb" src="{{item.image}}"></image></navigator>
-                <text class="cart-pro-name">{{item.title}}</text>
+                <text class="cart-pro-name">{{item.goodname}}</text>
                 <text class="cart-pro-price">￥{{item.price}}</text>
                 <view class="cart-pro-info-box"> 
-                <text class="cart-pro-guige">规格：{{item.guige}}</text>
+                <text class="cart-pro-guige">规格：{{item.size}}</text>
                 
                 </view>
                 <view class="cart-pro-box">
-                <text class="cart-pro-grade">等级：{{item.grade}}</text>
+                <text class="cart-pro-grade">等级：{{item.lv}}</text>
 
                 </view>
                 <view class="cart-count-box">
                     
-                    <text class="cart-count-num">数量：{{item.num}}</text>
+                    <text class="cart-count-num">数量：{{item.byNumber}}</text>
                     
                 </view>
                 <text class="cart-del" bindtap="deleteList" data-index="{{index}}">×</text>
